<resources>
    <string name="app_name">Memorize</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="decks">Decks</string>
    <string name="flash_cards">Flashcards</string>
    <string name="schedule_study_time">Schedule study time</string>
    <string name="map_bookstores">Bookstores nearby</string>
    <string name="account">Account</string>
    <string name="home_fragment">Home Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stationery_nearby">Stationery Nearby</string>
    <string name="add_deck">Add deck</string>
    <string name="add_flashcard">Add flashcard</string>

    <string name="hint_front_flashcard">Front of flashcard</string>
    <string name="hint_back_flashcard">Back of flashcard</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Flashcard not saved because one or two of the fields are empty.</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_next">Next flashcard</string>
    <string name="button_back">Previous flashcard</string>
    <string name="button_stop">Stop studying</string>
    <string name="hint_deck_name">Deck name</string>
    <string name="empty_deck_name">Deck not saved. Enter a name.</string>
    <string name="txt_study">Study</string>
    <string name="txt_study_hint">Hint: tap on the flashcard to flip the side</string>
    <string name="profile_picture">Profile picture</string>
    <string name="info_logged_in_screen">To start using Memorize, you can tap on the Decks menu item. There you can create decks and once you open the decks you can add flashcards and study them. Happy studying!</string>
    <string name="title_screen">Memorize</string>
    <string name="info_logged_out">Welcome to Memorize! To start setting up your decks and flashcards, please log in first.</string>

</resources>